Upgraded functionality for reuploading user's key